# core

./: README.md  pyproject.toml
src/core/: admin.py  backends.py  middleware.py  models.py  utils.py
src/core.egg-info/: PKG-INFO  SOURCES.txt
src/package_tutorial_VCANTIN/: example.py
src/package_tutorial_VCANTIN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
