[project]
name = "package_tutorial_VCANTIN"
version = "0.0.1"
authors = [
  { name="Vincent Cantin Bellemare", email="vcantin@cyberpublicity.com" },
]
description = "Tutorial package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/vcanttinsampleproject"
"Bug Tracker" = "https://github.com/pypa/vcantinsampleproject/issues"