[project]
name = "core"
version = "1.0.1"
authors = [
  { name="Vincent Cantin Bellemare", email="vcantin@cyberpublicity.com" },
]
description = "Cyberpublicity Core"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/vcanttinsampleproject"
"Bug Tracker" = "https://github.com/pypa/vcantinsampleproject/issues"